--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-<pre>vamsi tp</pre>
+﻿<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>vamsitp - docs</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/railscasts.min.css">
+    <link rel="stylesheet" href="assets/scribbler-global.css">
+    <link rel="stylesheet" href="assets/scribbler-landing.css">
+    <!--<link rel="stylesheet" href="ocean.css">-->
+    <link rel="author" href="humans.txt">
+</head>
+<body>
+    <nav>
+        <div></div>
+        <ul class="menu">
+            <div class="menu__item toggle"><span></span></div>
+            <li class="menu__item"><a href="https://github.com/vamsitp" target="_blank" class="link link--dark"><i class="fa fa-github"></i> Github</a></li>
+        </ul>
+    </nav>
+    <div class="hero">
+        <h1 class="hero__title"><a href="https://github.com/vamsitp" target="_blank">vamsitp</a></h1>
+        <p class="hero__description"></p>
+    </div>
+    <div class="wrapper">
+        <div class="installation">
+            <h3 class="section__title">installation</h3>
+            <div class="tab__container">
+                <ul class="tab__menu">
+                    <li class="tab active" data-tab="perfx">perfx</li>
+                    <li class="tab" data-tab="googlr">googlr</li>
+                    <li class="tab" data-tab="archy">archy</li>
+                </ul>
+                <pre class="code">
+                <code class="tab__pane active perfx">dotnet tool install -g perfx</code>
+                <code class="tab__pane googlr">dotnet tool install -g googlr</code>
+                <code class="tab__pane archy">dotnet tool install -g archy</code>
+                </pre>
+            </div>
+        </div>
+        <div class="feature">
+            <div class="feature__item">
+                <h3 class="section__title"><a href="https://vamsitp.github.io/perfx/" target="_blank">perfx</a></h3>
+                <p>An extensible Azure API Performance benchmarking tool (for Developers) based on App-Insights</p>
+            </div>
+            <div class="feature__item">
+                <h3 class="section__title"><a href="https://vamsitp.github.io/googlr/" target="_blank">googlr</a></h3>
+                <p>A cmd-line based Google search for Windows!</p>
+            </div>
+            <div class="feature__item">
+                <h3 class="section__title"><a href="https://vamsitp.github.io/archy/" target="_blank">archy</a></h3>
+                <p>Search for Products from an auto-generated list of detailed Architecture Components/Services based on multiple Cloud-platforms (AZURE / AWS / GCP / IBM)</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="hero__terminal">
+      <pre>
+        <!-- Place your demo code here -->
+          <code class="shell-session demo cmd">dotnet tool install -g perfx</code>
+      </pre>
+    </div>
+
+    <!--<footer class="footer"></footer>-->
+    <script src="assets/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="assets/scribbler.js"></script>
+</body>
+</html>
