Hosting common assets

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     </div>
 
     <div class="hero__terminal">
-      <pre>
+        <pre>
         <!-- Place your demo code here -->
-          <code class="shell-session demo cmd">dotnet tool install -g perfx</code>
+        <code class="shell-session demo cmd">dotnet tool install -g perfx</code>
       </pre>
     </div>
 
@@ -68,5 +68,6 @@
     <script src="assets/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script src="assets/scribbler.js"></script>
+    <script src="assets/scroll.js"></script>
 </body>
 </html>
