--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/railscasts.min.css">
     <link rel="stylesheet" href="assets/scribbler-global.css">
     <link rel="stylesheet" href="assets/scribbler-landing.css">
+    <link rel="stylesheet" href="assets/scribbler-doc.css">
     <!--<link rel="stylesheet" href="ocean.css">-->
     <link rel="author" href="humans.txt">
 </head>
