Mobile-mode updates

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>vamsitp - docs</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/railscasts.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Maven+Pro:wght@400;500&family=Open+Sans:wght@400;600&family=Roboto+Slab&display=swap">
     <link rel="stylesheet" href="assets/scribbler-global.css">
     <link rel="stylesheet" href="assets/scribbler-landing.css">
-    <link rel="stylesheet" href="assets/scribbler-doc.css">
-    <!--<link rel="stylesheet" href="ocean.css">-->
+    <!--<link rel="stylesheet" href="assets/scribbler-doc.css">-->
+    <link rel="stylesheet" href="assets/ocean.css">
     <link rel="author" href="humans.txt">
 </head>
 <body>
@@ -35,10 +35,14 @@
                     <li class="tab" data-tab="googlr">googlr</li>
                     <li class="tab" data-tab="archy">archy</li>
                 </ul>
-                <pre class="code">
-                <code class="tab__pane active perfx">dotnet tool install -g perfx</code>
-                <code class="tab__pane googlr">dotnet tool install -g googlr</code>
-                <code class="tab__pane archy">dotnet tool install -g archy</code>
+                <pre class="tab__pane active perfx">
+                    <code>dotnet tool install -g perfx</code>
+                </pre>
+                <pre class="tab__pane googlr">
+                    <code>dotnet tool install -g googlr</code>
+                </pre>
+                <pre class="tab__pane archy">
+                    <code>dotnet tool install -g archy</code>
                 </pre>
             </div>
         </div>
