--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
                     <li class="tab active" data-tab="perfx">perfx</li>
                     <li class="tab" data-tab="googlr">googlr</li>
                     <li class="tab" data-tab="archy">archy</li>
+                    <li class="tab" data-tab="azres">azres</li>
                 </ul>
                 <pre class="tab__pane active perfx">
-                    <code>dotnet tool install -g perfx</code>
+                <code>dotnet tool install -g perfx</code>
                 </pre>
                 <pre class="tab__pane googlr">
-                    <code>dotnet tool install -g googlr</code>
+                <code>dotnet tool install -g googlr</code>
                 </pre>
                 <pre class="tab__pane archy">
-                    <code>dotnet tool install -g archy</code>
+                <code>dotnet tool install -g archy</code>
+                </pre>
+                <pre class="tab__pane azres">
+                <code>dotnet tool install -g azres</code>
                 </pre>
             </div>
         </div>
@@ -58,6 +62,14 @@
             <div class="feature__item">
                 <h3 class="section__title"><a href="https://vamsitp.github.io/archy/" target="_blank">archy</a></h3>
                 <p>Search for Products from an auto-generated list of detailed Architecture Components/Services based on multiple Cloud-platforms (AZURE / AWS / GCP / IBM)</p>
+            </div>
+            <div class="feature__item">
+                <h3 class="section__title"><a href="https://vamsitp.github.io/azres/" target="_blank">azres</a></h3>
+                <p>Generate an Excel dump of Azure Resources with auxiliary details (like diagnostic-settings/properties)</p>
+            </div>
+            <div class="feature__item">
+                <h3 class="section__title"><a href="https://vamsitp.github.io/sla/" target="_blank">sla</a></h3>
+                <p>Calculate and generate an SLA-report, based on expected-Downtimes or Downtimes-report based on expected-SLAs</p>
             </div>
         </div>
     </div>
