--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p>A cmd-line based Google search for Windows!</p>
             </div>
             <div class="feature__item">
-                <h3 class="section__title"><a href="https://vamsitp.github.io/archy/" target="_blank">archy</a></h3>
+                <h3 class="section__title"><a href="https://github.com/vamsitp/archy#archy" target="_blank">archy</a> (<a href="https://archy.app">app</a>)</h3>
                 <p>Search for Products from an auto-generated list of detailed Architecture Components/Services based on multiple Cloud-platforms (AZURE / AWS / GCP / IBM)</p>
             </div>
             <div class="feature__item">
