--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li class="tab" data-tab="googlr">googlr</li>
                     <li class="tab" data-tab="archy">archy</li>
                     <li class="tab" data-tab="azres">azres</li>
+                    <li class="tab" data-tab="linx">linx</li>
                 </ul>
                 <pre class="tab__pane active perfx">
                 <code>dotnet tool install -g perfx</code>
@@ -47,6 +48,9 @@
                 </pre>
                 <pre class="tab__pane azres">
                 <code>dotnet tool install -g azres</code>
+                </pre>
+                <pre class="tab__pane linx">
+                <code>dotnet tool install -g linx</code>
                 </pre>
             </div>
         </div>
@@ -70,6 +74,10 @@
             <div class="feature__item">
                 <h3 class="section__title"><a href="https://vamsitp.github.io/sla/" target="_blank">sla</a></h3>
                 <p>Calculate and generate an SLA-report, based on expected-Downtimes or Downtimes-report based on expected-SLAs</p>
+            </div>
+            <div class="feature__item">
+                <h3 class="section__title"><a href="https://vamsitp.github.io/linx/" target="_blank">linx</a></h3>
+                <p>Bulk-extract and save/merge links from PowerPoint/Word as Markdown/Html/Csv</p>
             </div>
         </div>
     </div>
