moved scribbler text to individual scroll.js

--- a/index.html
+++ b/index.html
@@ -32,22 +32,26 @@
             <div class="tab__container">
                 <ul class="tab__menu">
                     <li class="tab active" data-tab="perfx">perfx</li>
-                    <li class="tab" data-tab="googlr">googlr</li>
+                    <li class="tab" data-tab="spex">spex</li>
                     <li class="tab" data-tab="archy">archy</li>
-                    <li class="tab" data-tab="azres">azres</li>
+                    <li class="tab" data-tab="googlr">googlr</li>
+                    <li class="tab" data-tab="sla">sla</li>
                     <li class="tab" data-tab="linx">linx</li>
                 </ul>
                 <pre class="tab__pane active perfx">
                 <code>dotnet tool install -g perfx</code>
                 </pre>
-                <pre class="tab__pane googlr">
-                <code>dotnet tool install -g googlr</code>
+                <pre class="tab__pane spex">
+                <code>dotnet tool install -g spex</code>
                 </pre>
                 <pre class="tab__pane archy">
                 <code>dotnet tool install -g archy</code>
                 </pre>
-                <pre class="tab__pane azres">
-                <code>dotnet tool install -g azres</code>
+                <pre class="tab__pane googlr">
+                <code>dotnet tool install -g googlr</code>
+                </pre>
+                <pre class="tab__pane sla">
+                <code>dotnet tool install -g sla</code>
                 </pre>
                 <pre class="tab__pane linx">
                 <code>dotnet tool install -g linx</code>
@@ -60,16 +64,16 @@
                 <p>An extensible Azure API Performance benchmarking tool (for Developers) based on App-Insights</p>
             </div>
             <div class="feature__item">
-                <h3 class="section__title"><a href="https://vamsitp.github.io/googlr/" target="_blank">googlr</a></h3>
-                <p>A cmd-line based Google search for Windows!</p>
+                <h3 class="section__title"><a href="https://vamsitp.github.io/spexdocs/" target="_blank">spex</a></h3>
+                <p>SpecFlow (Features) sync to Azure DevOps (TestCases)</p>
             </div>
             <div class="feature__item">
                 <h3 class="section__title"><a href="https://www.archy.app" target="_blank">archy</a></h3>
                 <p>Search for Products from an auto-generated list of detailed Architecture Components/Services based on multiple Cloud-platforms (AZURE / AWS / GCP / IBM)</p>
             </div>
             <div class="feature__item">
-                <h3 class="section__title"><a href="https://vamsitp.github.io/azres/" target="_blank">azres</a></h3>
-                <p>Generate an Excel dump of Azure Resources with auxiliary details (like diagnostic-settings/properties)</p>
+                <h3 class="section__title"><a href="https://vamsitp.github.io/googlr/" target="_blank">googlr</a></h3>
+                <p>A cmd-line based Google search for Windows (with support for <a href="https://support.google.com/websearch/answer/2466433" target="_blank">search-operators</a>)!</p>
             </div>
             <div class="feature__item">
                 <h3 class="section__title"><a href="https://vamsitp.github.io/sla/" target="_blank">sla</a></h3>
